fix text-align on login dropdown-menu

--- a/src/main/webapp/less/oztrack.less
+++ b/src/main/webapp/less/oztrack.less
@@ -343,6 +343,10 @@ a.thumbnail:hover {
   right: 0px;
 }
 
+#login div {
+  text-align: left;
+}
+
 #nav-extra {
   position: relative;
   float: left;
